[COMMIT] The proj files have been updated to enable SourceLink [DR.Common.Monitoring.Web.csproj]

--- a/src/DR.Common.Monitoring.Web/DR.Common.Monitoring.Web.csproj
+++ b/src/DR.Common.Monitoring.Web/DR.Common.Monitoring.Web.csproj
@@ -9,7 +9,15 @@
     <IncludeSymbols>true</IncludeSymbols>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
     <Description>DR SCOM dtos for health checks</Description>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\DR.Common.Monitoring\DR.Common.Monitoring.csproj" />
